driver/cuda_new/device/include/pie_cuda_device.h


typedef enum PieStatus {
    PIE_OK = 0,
    PIE_ERR_INVALID_ARG = 1,
    PIE_ERR_CUDA = 2,
    PIE_ERR_OOM = 3,
    PIE_ERR_UNSUPPORTED_ARCH = 4,
    PIE_ERR_INTERNAL = 5,
} PieStatus;
typedef struct PieDevCtx    PieDevCtx;     
typedef struct PieWorkspace PieWorkspace;  
PieStatus pie_cuda_rmsnorm_bf16(PieDevCtx* ctx, const void* x, const void* weight,
                                void* y, int32_t num_rows, int32_t hidden, float eps);
PieStatus pie_cuda_residual_add_bf16(PieDevCtx* ctx, void* y, const void* x, size_t n);
PieStatus pie_cuda_swiglu_bf16(PieDevCtx* ctx, const void* gate, const void* up,
                               void* y, int32_t num_elements);
PieStatus pie_cuda_rope_bf16(PieDevCtx* ctx, void* q, void* k, const int32_t* positions,
                             int32_t num_tokens, int32_t num_q_heads, int32_t num_kv_heads,
                             int32_t head_dim, float theta, int32_t interleaved);
PieStatus pie_cuda_gemm_bf16(PieDevCtx* ctx, const void* act, const void* w, void* y,
                             int32_t M, int32_t N, int32_t K, float beta);
PieStatus pie_cuda_embed_bf16(PieDevCtx* ctx, const int32_t* token_ids, const void* weight,
                              void* y, int32_t num_tokens, int32_t hidden, int32_t vocab);
PieStatus pie_cuda_argmax_bf16(PieDevCtx* ctx, const void* logits, int32_t* token_ids,
                               int32_t num_rows, int32_t vocab);
PieStatus pie_cuda_write_kv_to_pages_bf16(
    PieDevCtx* ctx, void* k_pages, void* v_pages, const void* k_curr, const void* v_curr,
    const uint32_t* qo_indptr_d, const uint32_t* kv_page_indices_d,
    const uint32_t* kv_page_indptr_d, const uint32_t* kv_last_page_lens_d,
    int32_t total_tokens, int32_t num_requests, int32_t page_size, int32_t num_kv_heads,
    int32_t head_dim, int32_t hnd_layout);
PieStatus pie_cuda_sample_temp_bf16(
    PieDevCtx* ctx, const void* logits, const float* temperatures, const float* top_ps,
    const int32_t* top_ks, const float* min_ps, const uint32_t* seeds, int32_t* out,
    int32_t num_rows, int32_t vocab);
PieStatus pie_cuda_cast_fp16_to_bf16(PieDevCtx* ctx, const void* src, void* dst, size_t n);
PieStatus pie_cuda_cast_fp32_to_bf16(PieDevCtx* ctx, const void* src, void* dst, size_t n);
PieStatus pie_cuda_cast_bf16_to_fp32(PieDevCtx* ctx, const void* src, void* dst, size_t n);
PieStatus pie_cuda_gather_bf16_rows(
    PieDevCtx* ctx, const uint16_t* src, const int32_t* row_indices, uint16_t* dst,
    int32_t num_dst_rows, int32_t vocab);
PieStatus pie_cuda_rmsnorm_gemma_bf16(PieDevCtx* ctx, const void* x, const void* weight,
                                      void* y, int32_t num_rows, int32_t hidden, float eps);
PieStatus pie_cuda_geglu_tanh_bf16(PieDevCtx* ctx, const void* gate, const void* up,
                                   void* y, int32_t num_elements);
PieStatus pie_cuda_logit_softcap_bf16(PieDevCtx* ctx, void* x, float cap, size_t n);
PieStatus pie_cuda_dequant_fp8_e4m3_to_bf16(PieDevCtx* ctx, const uint8_t* fp8_in,
                                            void* bf16_out, float scale, size_t n);
PieStatus pie_cuda_rope_yarn_bf16(
    PieDevCtx* ctx, void* q, void* k, const int32_t* positions, int32_t num_tokens,
    int32_t num_q_heads, int32_t num_kv_heads, int32_t head_dim, float theta, float factor,
    float low_freq_factor, float high_freq_factor, int32_t original_max_position);
PieStatus pie_cuda_topk_softmax_bf16(
    PieDevCtx* ctx, const void* logits, int32_t* topk_idx, float* topk_w, int32_t N,
    int32_t num_experts, int32_t K);
PieStatus pie_cuda_chunked_swiglu_bf16(PieDevCtx* ctx, const void* packed, void* y,
                                       int32_t N, int32_t I);
PieStatus pie_cuda_rope_partial_bf16(PieDevCtx* ctx, void* q, void* k, const int32_t* positions,
    int32_t num_tokens, int32_t num_q_heads, int32_t num_kv_heads, int32_t head_dim,
    int32_t rotary_dim, float theta);
PieStatus pie_cuda_causal_conv1d_prefill_bf16(PieDevCtx* ctx, const void* x, const void* weight,
    const void* bias, void* y, int32_t N, int32_t C, int32_t K);
PieStatus pie_cuda_dequant_wna16_int4b8_to_bf16(PieDevCtx* ctx, const int32_t* packed,
    const void* scale_bf16, void* out_bf16, int32_t out_dim, int32_t in_dim, int32_t group_size);
PieStatus pie_cuda_moe_mlp_block_bf16(
    PieDevCtx* ctx, const void* hidden, const void* router_w, const void* wgu,
    const void* wdown, void* out, int32_t num_tokens, int32_t hidden_size,
    int32_t intermediate, int32_t num_experts, int32_t top_k);
PieStatus pie_cuda_moe_sparse_block_bf16(
    PieDevCtx* ctx, const void* hidden, const void* router_w, const void* wgu,
    const void* wdown, void* out, int32_t num_tokens, int32_t hidden_size,
    int32_t intermediate, int32_t num_experts, int32_t top_k);
typedef struct PieNemotronMambaWeights {
    const void* in_proj_w;
    const void* conv_w;
    const void* conv_bias;
    const void* a_log;
    const void* d;
    const void* dt_bias;
    const void* norm_weight;
    const void* out_proj_w;
} PieNemotronMambaWeights;
PieStatus pie_cuda_nemotron_mamba_block_bf16(
    PieDevCtx* ctx, void* hidden, const PieNemotronMambaWeights* w, int32_t num_tokens,
    int32_t hidden_size, int32_t num_heads, int32_t head_dim, int32_t state_size,
    int32_t n_groups, int32_t conv_kernel, float rms_eps, float time_step_min);
typedef struct PieNemotronLayerWeights {
    char kind;                          
    const void* mamba_pre_norm;         
    PieNemotronMambaWeights mamba;      
    PieNemotronAttnWeights attn;        
    PieNemotronFfnWeights ffn;          
} PieNemotronLayerWeights;
typedef struct PieNemotronWeights {
    const void* embed;
    const PieNemotronLayerWeights* layers;   
    int32_t n_layers;
    const void* final_norm;
    const void* lm_head;
} PieNemotronWeights;
PieStatus pie_cuda_nemotron_forward_bf16(
    PieDevCtx* ctx, const int32_t* token_ids, const PieNemotronWeights* w,
    const int32_t* positions, void* out_logits, int32_t* out_token_ids, int32_t num_tokens,
    const char* kinds_host, int32_t hidden_size, int32_t vocab, int32_t mamba_num_heads,
    int32_t mamba_head_dim, int32_t mamba_state_size, int32_t mamba_n_groups,
    int32_t mamba_conv_kernel, float time_step_min, int32_t attn_n_q_heads,
    int32_t attn_n_kv_heads, int32_t attn_head_dim, int32_t page_size, float rope_theta,
    int32_t ffn_intermediate, float rms_eps);
typedef struct PieMlaLayerWeights {
    const void* attn_norm;
    const void* w_q_a;
    const void* q_a_ln;
    const void* w_q_b;
    const void* w_kv_a;
    const void* kv_a_ln;
    const void* w_uk;
    const void* w_uv;
    const void* w_o;
} PieMlaLayerWeights;
PieStatus pie_cuda_mla_block_bf16(
    PieDevCtx* ctx, void* hidden, const PieMlaLayerWeights* w, const int32_t* positions,
    void* ckv_pages, void* kpe_pages, const uint32_t* qo_indptr_d,
    const uint32_t* kv_page_indices_d, const uint32_t* kv_page_indptr_d,
    const uint32_t* kv_last_page_lens_d, int32_t num_tokens, int32_t num_requests,
    int32_t hidden_size, int32_t num_heads, int32_t q_lora_rank, int32_t kv_lora_rank,
    int32_t qk_nope_head_dim, int32_t qk_rope_head_dim, int32_t v_head_dim,
    int32_t page_size, float rms_eps, float sm_scale, float rope_theta);
typedef struct PieMlaWeights {
    const void* embed;
    const PieMlaLayerWeights* layers;
    int32_t n_layers;
    const void* final_norm;
    const void* lm_head;
} PieMlaWeights;
PieStatus pie_cuda_mla_forward_bf16(
    PieDevCtx* ctx, const int32_t* token_ids, const PieMlaWeights* w, const int32_t* positions,
    void* ckv_pages, void* kpe_pages, const uint32_t* qo_indptr_d,
    const uint32_t* kv_page_indices_d, const uint32_t* kv_page_indptr_d,
    const uint32_t* kv_last_page_lens_d, void* out_logits, int32_t* out_token_ids,
    int32_t num_tokens, int32_t num_requests, int32_t hidden_size, int32_t num_heads,
    int32_t q_lora_rank, int32_t kv_lora_rank, int32_t qk_nope_head_dim,
    int32_t qk_rope_head_dim, int32_t v_head_dim, int32_t vocab, int32_t page_size,
    int32_t num_pages, float rms_eps, float sm_scale, float rope_theta);
typedef struct PieMoeLayerWeights {
    const void* attn_norm;
    const void* wq;
    const void* wk;
    const void* wv;
    const void* wo;
    const void* ffn_norm;
    const void* router_w;
    const void* wgu;
    const void* wdown;
} PieMoeLayerWeights;
typedef struct PieMoeWeights {
    const void* embed;
    const PieMoeLayerWeights* layers;
    int32_t n_layers;
    const void* final_norm;
    const void* lm_head;
} PieMoeWeights;
PieStatus pie_cuda_moe_forward_bf16(
    PieDevCtx* ctx, const int32_t* token_ids, const PieMoeWeights* w, const int32_t* positions,
    void* kv_k, void* kv_v, const uint32_t* qo_indptr_d, const uint32_t* kv_page_indices_d,
    const uint32_t* kv_page_indptr_d, const uint32_t* kv_last_page_lens_d, void* out_logits,
    int32_t* out_token_ids, int32_t num_tokens, int32_t num_requests, int32_t num_kv_pages,
    int32_t hidden_size, int32_t n_q_heads, int32_t n_kv_heads, int32_t head_dim,
    int32_t intermediate, int32_t num_experts, int32_t top_k, int32_t vocab, int32_t page_size,
    float rms_eps, float rope_theta);
typedef struct PieDeepseekLayerWeights {
    PieMlaLayerWeights attn;
    const void* ffn_norm;
    const void* w_gate;
    const void* w_up;
    const void* w_down;
    const void* router_w;
    const void* wgu;
    const void* wdown;
} PieDeepseekLayerWeights;
typedef struct PieDeepseekWeights {
    const void* embed;
    const PieDeepseekLayerWeights* layers;
    int32_t n_layers;
    const void* final_norm;
    const void* lm_head;
} PieDeepseekWeights;
PieStatus pie_cuda_deepseek_forward_bf16(
    PieDevCtx* ctx, const int32_t* token_ids, const PieDeepseekWeights* w,
    const int32_t* positions, void* ckv_pages, void* kpe_pages, const uint32_t* qo_indptr_d,
    const uint32_t* kv_page_indices_d, const uint32_t* kv_page_indptr_d,
    const uint32_t* kv_last_page_lens_d, void* out_logits, int32_t* out_token_ids,
    int32_t num_tokens, int32_t num_requests, int32_t first_k_dense, int32_t hidden_size,
    int32_t num_heads, int32_t q_lora_rank, int32_t kv_lora_rank, int32_t qk_nope_head_dim,
    int32_t qk_rope_head_dim, int32_t v_head_dim, int32_t dense_inter, int32_t moe_inter,
    int32_t num_experts, int32_t top_k, int32_t vocab, int32_t page_size, int32_t num_pages,
    float rms_eps, float sm_scale, float rope_theta);
typedef struct PieGemmaLayerWeights {
    const void* input_ln;
    const void* post_attn_ln;
    const void* pre_ffn_ln;
    const void* post_ffn_ln;
    const void* wq;
    const void* wk;
    const void* wv;
    const void* wo;
    const void* w_gate;
    const void* w_up;
    const void* w_down;
} PieGemmaLayerWeights;
typedef struct PieGemmaWeights {
    const void* embed;
    const PieGemmaLayerWeights* layers;
    int32_t n_layers;
    const void* final_norm;
    const void* lm_head;
} PieGemmaWeights;
PieStatus pie_cuda_gemma_forward_bf16(
    PieDevCtx* ctx, PieWorkspace* ws, const int32_t* token_ids, const PieGemmaWeights* w,
    const int32_t* positions,
    void* k_pages, void* v_pages, const uint32_t* qo_indptr_d, const uint32_t* kv_page_indices_d,
    const uint32_t* kv_page_indptr_d, const uint32_t* kv_last_page_lens_d, void* out_logits,
    int32_t* out_token_ids, int32_t num_tokens, int32_t num_requests, int32_t hidden_size,
    int32_t n_q_heads, int32_t n_kv_heads, int32_t head_dim, int32_t intermediate, int32_t vocab,
    int32_t page_size, int32_t num_pages, const int32_t* window_left_host, int32_t window_left_all,
    float attn_logit_softcap, float final_logit_softcap, float embed_scale, float rms_eps,
    float rope_theta, int32_t qk_norm, int32_t altup_num_inputs);
PieStatus pie_cuda_altup_predict_bf16(
    PieDevCtx* ctx, const void* streams, const float* coefs, void* predictions,
    int32_t k_streams, int32_t num_tokens, int32_t hidden_size);
PieStatus pie_cuda_altup_correct_bf16(
    PieDevCtx* ctx, const void* predictions, const void* activated,
    const float* correction_coefs_p1, void* corrected, int32_t k_streams,
    int32_t num_tokens, int32_t hidden_size, int32_t active_idx);
PieStatus pie_cuda_grouped_gemm_bf16(
    PieDevCtx* ctx, const void* x, const void* w, const int32_t* expert_offsets_host,
    void* y, int32_t total_rows, int32_t num_experts, int32_t n_out, int32_t k_in);
PieStatus pie_cuda_ssm_selective_scan_bf16(
    PieDevCtx* ctx, const void* conv_out, const void* dt, const float* a, const float* d,
    const float* dt_bias, const float* dt_precomputed, const float* da_precomputed,
    void* ssm_state_base, const int32_t* slot_ids, const uint32_t* qo_indptr, void* y,
    int32_t num_requests, int32_t num_heads, int32_t head_dim, int32_t state_size,
    int32_t n_groups, int32_t conv_dim, int32_t intermediate, float time_step_min);
PieStatus pie_cuda_qgemm_w4a16_bf16(
    PieDevCtx* ctx, const void* act_bf16, const int32_t* qweight_packed,
    const void* scales_bf16, void* out_bf16, int32_t m, int32_t n, int32_t k,
    int32_t group_size, int32_t* workspace, int32_t sms);
PieStatus pie_cuda_qgemm_w4a16_repack(
    PieDevCtx* ctx, const int32_t* qweight_rowmajor_packed, int32_t* qweight_out,
    int32_t n, int32_t k);
int32_t pie_cuda_qgemm_w4a16_workspace_ints(int32_t n, int32_t max_m);
PieStatus pie_cuda_qgemm_w8a16_fp8_bf16(
    PieDevCtx* ctx, const void* act_bf16, const void* qweight_fp8, const void* scales_bf16,
    void* out_bf16, int32_t m, int32_t n, int32_t k, int32_t group_size, int32_t* workspace,
    int32_t sms);
PieStatus pie_cuda_qgemm_w8a16_fp8_repack(
    PieDevCtx* ctx, const int32_t* qweight_rowmajor_packed, int32_t* qweight_out, int32_t n,
    int32_t k);
int32_t pie_cuda_qgemm_w8a16_fp8_workspace_ints(int32_t n, int32_t max_m);